<resources>
    <string name="app_name">MyGrades</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_course">Create Course</string>
    <string name="action_home">Home</string>
    <string name="title_activity_add_course">Add Course</string>
    <string name="home">Home</string>
    <string name="add_course">Add Course</string>
    <string name="title_activity_create_course">CreateCourse</string>
    <string name="create_course">Create Course</string>
    <string name="action_create_course_list">Create Course List</string>
    <string name="name">Name</string>
    <string name="semester">Semester</string>
    <string name="code">Code</string>
    <string name="grade">Grade</string>
    <string name="title_activity_view_list">View List</string>
    <string name="Home">Home</string>
    <string name="update">Update</string>
    <string name="title_activity_update_course">Update Course</string>
    <string name="action_delete_course">delete_course</string>
    <string name="Save">save</string>
    <string-array name="semester_array">
        <item>--Select--</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
    </string-array>
    <string-array name="grade_array">
        <item>--Select--</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>F</item>
        <item>W</item>
        <item>P</item>
        <item>I</item>
    </string-array>
</resources>
