<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UpdateCourse"
    tools:showIn="@layout/activity_update_course">

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="439dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:width="200dp"
                android:ems="10"
                android:hint="Course Name"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="25" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/semesterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester" />

            <Spinner
                android:id="@+id/spinnerSemester"

                android:layout_width="221dp"
                android:layout_height="50dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/yearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Year" />

            <EditText
                android:id="@+id/yearEditText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="####"
                android:inputType="number"
                android:maxLength="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/codeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code" />

            <EditText
                android:id="@+id/codeEditText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:capitalize="characters"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:hint="[aaaa###]"
                android:inputType="textCapCharacters"
                android:maxLength="7" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/gradeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade" />

            <Spinner
                android:id="@+id/spinnerGrade"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>